# team-f-boeing-travelling-salesman

./: .gitignore  Cargo.toml  README.md  ReadMe.md  aircraft_routing_problem_generator.py  info.md
boeing_traveling_salesman/: Cargo.toml  aircraft_routing_problem_generator.py  atestsparse.csv  full_15_world4.csv  full_world.csv  full_world.puml  index.js  info.md  sparse_15_world4.csv  sparse_world.csv  sparse_world.puml
boeing_traveling_salesman/src/: algo.rs  algorithms.rs  analyzer.rs  csv_reader.rs  csv_readers.rs  graph.rs  graph_utils.rs  lib.rs  main.rs  tests.rs
boeing_traveling_salesman/test-csv-full-world/: full_100_world13.csv  full_100_world14.csv  full_100_world15.csv  full_100_world16.csv  full_100_world3.csv  full_100_world5.csv  full_100_world6.csv  full_15_world10.csv  full_15_world2.csv  full_15_world8.csv  full_15_world9.csv  full_world.csv
boeing_traveling_salesman/test-csv-sparse/: smallhard.csv  sparse_100_world13.csv  sparse_100_world14.csv  sparse_100_world15.csv  sparse_100_world16.csv  sparse_100_world5.csv  sparse_15_world1.csv  sparse_15_world10.csv  sparse_15_world11.csv  sparse_15_world12.csv  sparse_15_world13.csv  sparse_15_world8.csv  sparse_15_world9.csv  sparse_50_world6.csv  sparse_world2.csv  sparse_world4.csv
boeing_traveling_salesman/web/: index.html  index.js  styles.css
src/: main.rs
