[package]
name = "boeing_travelling_salesman"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"]}
csv = "1.2"
petgraph = "0.7"
wasm-bindgen = "0.2.1"   # Necessary for WebAssembly bindings
serde = { version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-logger = "0.2"
console_log = "0.2"
bitvec = "1.0"
[lib]
crate-type = ["cdylib"]  # Required for WebAssembly builds
